# vsomeip-sd

./: .cmake-format.py  Android.bp  CMakeLists.txt  README.md
.github/: CODEOWNERS  Pull_Request_Template.md  README.md
android/sysprop/: PlatformLoggingProperties.sysprop  VendorLoggingProperties.sysprop
api/: vsomeip.system.logging_properties-current.txt  vsomeip.vendor.logging_properties-current.txt
examples/: CMakeLists.txt
examples/hello_world/: Android.bp  CMakeLists.txt
examples/routingmanagerd/: CMakeLists.txt  routingmanagerd.cpp
implementation/configuration/include/: configuration.hpp  configuration_impl.hpp  internal.hpp.in  internal_android.hpp  watchdog.hpp
implementation/configuration/src/: configuration_impl.cpp
implementation/endpoints/include/: local_server_endpoint_impl_receive_op.hpp  sockcred.hpp  udp_server_endpoint_impl_receive_op.hpp
implementation/endpoints/src/: client_endpoint_impl.cpp  credentials.cpp  endpoint_manager_impl.cpp  local_tcp_server_endpoint_impl.cpp  local_uds_client_endpoint_impl.cpp  local_uds_server_endpoint_impl.cpp  tcp_client_endpoint_impl.cpp  tcp_server_endpoint_impl.cpp  udp_server_endpoint_impl.cpp
implementation/logger/include/: logger_impl.hpp
implementation/logger/src/: message.cpp
implementation/routing/src/: eventgroupinfo.cpp  routing_manager_base.cpp  routing_manager_client.cpp  routing_manager_impl.cpp  routing_manager_stub.cpp
implementation/runtime/include/: application_impl.hpp
implementation/runtime/src/: application_impl.cpp
implementation/service_discovery/src/: message_impl.cpp  service_discovery_impl.cpp
implementation/tracing/src/: connector_impl.cpp
implementation/utility/include/: byteorder.hpp
interface/vsomeip/: vsomeip_sec.h
test/benchmark_tests/: CMakeLists.txt
tools/: CMakeLists.txt
